Chapter 2: additional content

--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -593,9 +593,6 @@
   url    = {https://redis.io/}
 }
 
-
-Bibliografia (file python_refs.bib)
-
 @book{van_rossum_1995,
   title     = {Python Reference Manual},
   author    = {van Rossum, Guido},
@@ -634,4 +631,146 @@ Bibliografia (file python_refs.bib)
   year   = {2023},
   url    = {https://flask.palletsprojects.com/},
   note   = {Accessed: 2025-08-21}
+}
+
+@book{chodorow2013mongodb,
+  title     = {MongoDB: the definitive guide},
+  author    = {Chodorow, Kristina},
+  year      = {2013},
+  publisher = {O'Reilly Media},
+  edition   = {2nd},
+  isbn      = {978-1449344689}
+}
+
+@book{banker2011mongodb,
+  title     = {MongoDB in action},
+  author    = {Banker, Kyle},
+  year      = {2011},
+  publisher = {Manning Publications},
+  isbn      = {978-1935182870}
+}
+
+@book{plugge2010mongodb,
+  title     = {The definitive guide to MongoDB: the noSQL database for cloud and desktop computing},
+  author    = {Plugge, Eelco and Hawkins, Tim and Membrey, Peter},
+  year      = {2010},
+  publisher = {Apress},
+  isbn      = {978-1430230519}
+}
+
+@book{harrison2015mongodb,
+  title     = {MongoDB Applied Design Patterns},
+  author    = {Harrison, Rick},
+  year      = {2015},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1449340049}
+}
+
+@book{membrey2014definitive,
+  title     = {The Definitive Guide to MongoDB: A complete guide to dealing with Big Data using MongoDB},
+  author    = {Membrey, Peter and Plugge, Eelco and Hawkins, Tim},
+  year      = {2014},
+  publisher = {Apress},
+  edition   = {3rd},
+  isbn      = {978-1484211830}
+}
+
+@book{dayley2014mongodb,
+  title     = {MongoDB and Python: Patterns and processes for the popular document-oriented database},
+  author    = {Dayley, Brad},
+  year      = {2014},
+  publisher = {Addison-Wesley Professional},
+  isbn      = {978-0321929945}
+}
+@book{narkhede2017kafka,
+  title     = {Kafka: The Definitive Guide},
+  author    = {Narkhede, Neha and Shapira, Gwen and Palino, Todd},
+  year      = {2017},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1491936160},
+  edition   = {1st}
+}
+
+@book{stopford2018designing,
+  title     = {Designing Event-Driven Systems: Concepts and Patterns for Streaming Services with Apache Kafka},
+  author    = {Stopford, Ben},
+  year      = {2018},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1492038221}
+}
+
+@book{garg2013apache,
+  title     = {Apache Kafka},
+  author    = {Garg, Nishant},
+  year      = {2013},
+  publisher = {Packt Publishing},
+  isbn      = {978-1782167938}
+}
+
+@article{kreps2014kafka,
+  title     = {Kafka: a distributed messaging system for log processing},
+  author    = {Kreps, Jay and Narkhede, Neha and Rao, Jun and others},
+  journal   = {Proceedings of the NetDB Workshop},
+  year      = {2011},
+  publisher = {ACM},
+  note      = {Republished and expanded 2014}
+}
+
+@book{palino2020kafka,
+  title     = {Kafka in Action},
+  author    = {Palino, Dylan and Sivaram, Rajini},
+  year      = {2022},
+  publisher = {Manning Publications},
+  isbn      = {978-1617295232}
+}
+
+@techreport{shapira2016kafka,
+  title       = {Building Real-Time Data Pipelines with Apache Kafka},
+  author      = {Shapira, Gwen},
+  year        = {2016},
+  institution = {Confluent Inc.},
+  type        = {Technical Report}
+}
+@book{mouat2015docker,
+  title     = {Using Docker: Developing and Deploying Software with Containers},
+  author    = {Mouat, Adrian},
+  year      = {2015},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1491915752}
+}
+
+@article{merkel2014docker,
+  title     = {Docker: lightweight linux containers for consistent development and deployment},
+  author    = {Merkel, Dirk},
+  journal   = {Linux journal},
+  volume    = {2014},
+  number    = {239},
+  pages     = {2},
+  year      = {2014},
+  publisher = {Belltown Media}
+}
+
+@misc{dockercompose2023,
+  title        = {Docker Compose Overview},
+  author       = {{Docker Inc.}},
+  year         = {2023},
+  howpublished = {\url{https://docs.docker.com/compose/}},
+  note         = {Accessed: 2024-01-15}
+}
+
+@article{fowler2013microservices,
+  title        = {Microservices},
+  author       = {Fowler, Martin and Lewis, James},
+  journal      = {ThoughtWorks},
+  year         = {2014},
+  howpublished = {\url{https://martinfowler.com/articles/microservices.html}},
+  note         = {Accessed: 2024-01-15}
+}
+
+@book{newman2015microservices,
+  title     = {Building microservices: designing fine-grained systems},
+  author    = {Newman, Sam},
+  year      = {2015},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1491950357}
 }
