--- a/docs/thesis/frontMatter/frontespizio.tex
+++ b/docs/thesis/frontMatter/frontespizio.tex
@@ -24,7 +24,7 @@
 \begin{minipage}[t]{0.47\textwidth}
 {\large{\bf Relatore:\\Prof.ssa \xsupervisor}}
 \vspace{5mm}
-{\large{\bf \\Correlatore:\\Dr. \xcorrelatore}}
+{\large{\bf \\Correlatore:\\Dr. \xcorrelatored\\Dr. \xcorrelatoreo}}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.47\textwidth}\raggedleft
