--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -68,7 +68,8 @@
 %%%%%%%%%%%%%%%%%%%
 \newcommand{\xstudent}{Matteo Zeno Bagli}
 \newcommand{\xsupervisor}{Silvia Mirri}
-\newcommand{\xcorrelatore}{Kelvin Oluwada Milare Obuneme Olaiya}
+\newcommand{\xcorrelatored}{Giovanni Delnevo}
+\newcommand{\xcorrelatoreo}{Kelvin Olaiya}
 \newcommand{\xsession}{II}
 \newcommand{\xaccademicyear}{2024-2025}
 \newcommand{\donotmumberlastpageonleft}{\clearpage{\pagestyle{empty}\cleardoublepage}}
@@ -113,7 +114,7 @@
 % Sections inclusion
 \input{mainMatter/01-cap.tex}
 \input{mainMatter/02-cap.tex}
-% \input{mainMatter/03-cap.tex}
+\input{mainMatter/03-cap.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
