--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -31,6 +31,9 @@
 \usepackage{tikz-3dplot}
 \usepackage{float}
 \usepackage{fancyvrb}
+\usepackage[acronym, automake]{glossaries}
+\makeglossaries
+\input{backMatter/acronimi.tex}
 
 \setlength{\headheight}{14.49998pt}
 \addtolength{\topmargin}{-2.49998pt}
@@ -102,6 +105,9 @@
 
 \donotmumberlastpageonleft
 \listoftables % Makes list of tables
+
+\donotmumberlastpageonleft
+\printglossary[type=\acronymtype]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document body start                                                                   %
