--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -774,3 +774,108 @@
   publisher = {O'Reilly Media},
   isbn      = {978-1491950357}
 }
+
+@book{newman2015building,
+  title     = {Building Microservices: Designing Fine-Grained Systems},
+  author    = {Newman, Sam},
+  year      = {2015},
+  publisher = {O'Reilly Media},
+  isbn      = {978-1491950357}
+}
+
+@misc{fowler2014microservices,
+  title        = {Microservices: a definition of this new architectural term},
+  author       = {Fowler, Martin and Lewis, James},
+  year         = {2014},
+  howpublished = {\url{https://martinfowler.com/articles/microservices.html}},
+  note         = {Accessed: 2024-08-25}
+}
+
+@article{dragoni2017microservices,
+  title     = {Microservices: yesterday, today, and tomorrow},
+  author    = {Dragoni, Nicola and Giallorenzo, Saverio and Lafuente, Alberto Lluch and Mazzara, Manuel and Montesi, Fabrizio and Mustafin, Ruslan and Safina, Larisa},
+  journal   = {Present and Ulterior Software Engineering},
+  pages     = {195--216},
+  year      = {2017},
+  publisher = {Springer}
+}
+
+@book{richardson2018microservices,
+  title     = {Microservices Patterns: With examples in Java},
+  author    = {Richardson, Chris},
+  year      = {2018},
+  publisher = {Manning Publications},
+  isbn      = {978-1617294549}
+}
+
+@book{wolff2016microservices,
+  title     = {Microservices: Flexible Software Architecture},
+  author    = {Wolff, Eberhard},
+  year      = {2016},
+  publisher = {Addison-Wesley Professional},
+  isbn      = {978-0134602417}
+}
+
+@inproceedings{chen2018microservices,
+  title        = {From monolith to microservices: a dataflow-driven approach},
+  author       = {Chen, Liang and Ali, Babar and Bilal, Muhammad},
+  booktitle    = {Proceedings of the 24th Asia-Pacific Software Engineering Conference},
+  pages        = {466--475},
+  year         = {2017},
+  organization = {IEEE}
+}
+
+@article{taibi2017definition,
+  title     = {Definition, benefits and challenges of microservices: A systematic mapping study},
+  author    = {Taibi, Davide and Lenarduzzi, Valentina and Pahl, Claus},
+  journal   = {Journal of Systems and Software},
+  volume    = {144},
+  pages     = {61--79},
+  year      = {2018},
+  publisher = {Elsevier}
+}
+
+@inproceedings{alshuqayran2016systematic,
+  title        = {A systematic mapping study in microservice architecture},
+  author       = {Alshuqayran, Nuha and Ali, Nour and Evans, Roger},
+  booktitle    = {2016 IEEE 9th International Conference on Service-Oriented Computing and Applications (SOCA)},
+  pages        = {44--51},
+  year         = {2016},
+  organization = {IEEE}
+}
+
+@misc{haversine_formula,
+  author       = {Chris Veness},
+  title        = {Calculate Distance, Bearing and More between Latitude/Longitude Points},
+  howpublished = {\url{https://www.movable-type.co.uk/scripts/latlong.html}},
+  year         = {2002-2022}
+}
+
+@book{wilkinson2009grammar,
+  title     = {The Grammar of Graphics},
+  author    = {Wilkinson, Leland},
+  year      = {2009},
+  edition   = {2nd},
+  publisher = {Springer Science \& Business Media},
+  address   = {New York},
+  isbn      = {978-0-387-24544-7}
+}
+
+@book{cleveland1993visualizing,
+  title     = {Visualizing Data},
+  author    = {Cleveland, William S.},
+  year      = {1993},
+  publisher = {Hobart Press},
+  address   = {Summit, NJ},
+  isbn      = {0-9634884-0-6}
+}
+
+@book{ware2012information,
+  title     = {Information Visualization: Perception for Design},
+  author    = {Ware, Colin},
+  year      = {2012},
+  edition   = {3rd},
+  publisher = {Morgan Kaufmann},
+  address   = {Boston, MA},
+  isbn      = {978-0-12-381464-7}
+}
