--- a/docs/thesis/mainMatter/01-cap.tex
+++ b/docs/thesis/mainMatter/01-cap.tex
@@ -561,9 +561,9 @@ intersezioni, soprattutto quelle semaforizzate, costituiscono zone di concentraz
 dove il traffico in attesa genera un incremento localizzato dell'inquinamento atmosferico,
 rendendo quindi la misurazione più significativa.
 
-La seguente query \ref{lst:esempio} in Overpass \acrshort{ql} estrae tali intersezioni:
+La seguente query \ref{lst:overpass-query} in Overpass \acrshort{ql} estrae tali intersezioni:
 
-\begin{lstlisting}[caption={Query in Overpass \acrshort{ql} di esempio}, label=lst:esempio]
+\begin{lstlisting}[caption={Query in Overpass \acrshort{ql} di esempio}, label=lst:overpass-query]
 [out:json][timeout:90];
 
 // Area corrispondente al comune di Bologna
