--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -31,6 +31,7 @@
 \usepackage{tikz-3dplot}
 \usepackage{float}
 \usepackage{fancyvrb}
+\usepackage{subcaption}
 \usepackage[acronym, automake]{glossaries}
 \makeglossaries
 \input{backMatter/acronimi.tex}
